v0.15.0/_sources/generated/statsmodels.tsa.statespace.sarimax.SARIMAXResults.rst.txt
statsmodels.tsa.statespace.sarimax.SARIMAXResults
=================================================

.. currentmodule:: statsmodels.tsa.statespace.sarimax

.. autoclass:: SARIMAXResults
   :exclude-members: append,apply,conf_int,cov_params,extend,f_test,forecast,get_forecast,get_prediction,get_smoothed_decomposition,impulse_responses,info_criteria,initialize,load,news,normalized_cov_params,plot_diagnostics,predict,remove_data,save,simulate,summary,t_test,t_test_pairwise,test_heteroskedasticity,test_normality,test_serial_correlation,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~SARIMAXResults.append
      ~SARIMAXResults.apply
      ~SARIMAXResults.conf_int
      ~SARIMAXResults.cov_params
      ~SARIMAXResults.extend
      ~SARIMAXResults.f_test
      ~SARIMAXResults.forecast
      ~SARIMAXResults.get_forecast
      ~SARIMAXResults.get_prediction
      ~SARIMAXResults.get_smoothed_decomposition
      ~SARIMAXResults.impulse_responses
      ~SARIMAXResults.info_criteria
      ~SARIMAXResults.initialize
      ~SARIMAXResults.load
      ~SARIMAXResults.news
      ~SARIMAXResults.normalized_cov_params
      ~SARIMAXResults.plot_diagnostics
      ~SARIMAXResults.predict
      ~SARIMAXResults.remove_data
      ~SARIMAXResults.save
      ~SARIMAXResults.simulate
      ~SARIMAXResults.summary
      ~SARIMAXResults.t_test
      ~SARIMAXResults.t_test_pairwise
      ~SARIMAXResults.test_heteroskedasticity
      ~SARIMAXResults.test_normality
      ~SARIMAXResults.test_serial_correlation
      ~SARIMAXResults.wald_test
      ~SARIMAXResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~SARIMAXResults.aic
      ~SARIMAXResults.aicc
      ~SARIMAXResults.arfreq
      ~SARIMAXResults.arparams
      ~SARIMAXResults.arroots
      ~SARIMAXResults.bic
      ~SARIMAXResults.bse
      ~SARIMAXResults.cov_params_approx
      ~SARIMAXResults.cov_params_oim
      ~SARIMAXResults.cov_params_opg
      ~SARIMAXResults.cov_params_robust
      ~SARIMAXResults.cov_params_robust_approx
      ~SARIMAXResults.cov_params_robust_oim
      ~SARIMAXResults.fittedvalues
      ~SARIMAXResults.hqic
      ~SARIMAXResults.llf
      ~SARIMAXResults.llf_obs
      ~SARIMAXResults.loglikelihood_burn
      ~SARIMAXResults.mae
      ~SARIMAXResults.mafreq
      ~SARIMAXResults.maparams
      ~SARIMAXResults.maroots
      ~SARIMAXResults.mse
      ~SARIMAXResults.pvalues
      ~SARIMAXResults.resid
      ~SARIMAXResults.seasonalarparams
      ~SARIMAXResults.seasonalmaparams
      ~SARIMAXResults.sse
      ~SARIMAXResults.states
      ~SARIMAXResults.tvalues
      ~SARIMAXResults.use_t
      ~SARIMAXResults.zvalues
   
   
   